--- a/3/debian-10/docker-compose.yml
+++ b/3/debian-10/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  mariadb:
+  mariadb-1:
     image: 'bitnami/mariadb:10.1'
     environment:
       - MARIADB_USER=bn_moodle
@@ -8,10 +8,10 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
       - 'mariadb_data:/bitnami'
-  moodle:
-    image: 'bitnami/moodle:3'
+  moodle-1:
+    image: 'moodle:2'
     environment:
-      - MARIADB_HOST=mariadb
+      - MARIADB_HOST=mariadb-1
       - MARIADB_PORT_NUMBER=3306
       - MOODLE_DATABASE_USER=bn_moodle
       - MOODLE_DATABASE_NAME=bitnami_moodle
@@ -22,7 +22,7 @@ services:
     volumes:
       - 'moodle_data:/bitnami'
     depends_on:
-      - mariadb
+      - mariadb-1
 volumes:
   mariadb_data:
     driver: local
